--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <!--BTW. You can leave these faded comments be, or delete them. They are but road signs, absent from the larger design-->
 
 <!--Go ahead and fill in the blank in the the Title of this HTML document below. The title will appear in your browser tab-->
-<title>I am...</title>
+<title>I am Elise</title>
+
 
     <!--this other stuff below the title does important work to help tell different browsers what this page should look like on different screens-->
 <meta charset="UTF-8">
@@ -21,8 +22,8 @@
 
 <div class="hero-image">
   <div class="hero-text">
-      <h1>I am...</h1>
-      <h2>A Project in Becoming</h2>
+      <h1>I am Xiabe</h1>
+      <h2>I'm a super loving dog</h2>
   </div>
 </div>
 
@@ -32,7 +33,7 @@
 
     <div class="textblock" style="text-align: left">
          <h1>Field of Study</h1>
-  <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
+  <h2>Currently, I'm interested in pursuing a course of study in leisure. I live with two workaholics,and my casual observation from bed shows that they can be irritable and are constantly in a state that they describe as "exhaustion." The woman reads a lot and recites passages from a fellow she calls Shakespeare. Occasionally, I feel jealous because she also writes about horses, and I worry she loves them more than me.</h2>
   </div>
 
 <br>
@@ -47,6 +48,7 @@
 <br>
 <br>
 
+
      <!--Did you know "Lorem ipsum," the fill text used in this web template, was hacked out of Cicero's "De finibus bonorum et malorum"? Developers made it non-sensical, so don't bother with Google Translate." -->
 
 
@@ -56,7 +58,7 @@
 
      <div class="textblock" style="text-align: left">
  <h1>Home and Family</h1>
-  <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
+  <h2>I was born on a farm in Greensburg, PA. I remember biting my brothers and sister and receiving nips in return. I live in Pittsburgh now, and the man and the woman are my pack. Everyday I'm so excited to see them in the morning and go for my first walk. Currently, along the streets I find leaf piles full of interesting smells and tastes. This is how I learn about my world. I smell the other dogs I know from my street and the dog park. I like the dogs I meet, but I feel safest with my people. Sometimes the other dogs pick on me and bully me. I love running in the dog park, but other dogs take my ball. I don't always know if the dogs want to play with me or if they want to hurt me. The woman helps when I'm confused. She sits with me and talks with me, and if the other dogs won't leave me alone, we go home. And I get treats. </h2>
   </div>
 
 <br>
@@ -68,6 +70,8 @@
 <!--Show us. Find those beautiful, meaningful "family" photos and pictures of your place (only you can define family). If you are concerned about issues of privacy, you can always use stock images, or get creative. Add these photos to your project folder, making sure the files end in .jpg or .png and replace the names in the grid code below. You can add more images if you wish, or subtract... see what happens – you have to be playful to find the purpose of things.-->
 
     <!--Here we are using rows and column classes to create some divisions on the page that will scale with mobile devices.-->
+
+
 
 <div class="row">
   <div class="column">
